--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "php": ">=5.6.4",
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
+        "predis/predis": "^1.1",
         "sunra/php-simple-html-dom-parser": "1.5.2"
     },
     "require-dev": {
@@ -20,7 +21,7 @@
             "database"
         ],
         "psr-4": {
-            "microbiome\\": "app/"
+            "Microbiome\\": "app/"
         }
     },
     "autoload-dev": {
